# gmv-forecaster

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/assets/sources/: stores.csv  transactions.csv
envs/conda/: build_conda_env.sh  conda_env_info.sh  utils.sh
forecaster/: main.py  plot.py  run_forecasting.py  run_training.py
forecaster/data/: __init__.py  data_handler.py  data_preprocessor.py  data_proprocessor.py  training_data_generator.py  utils.py
forecaster/evaluation/: __init__.py  utils.py
forecaster/inference/: forecaster.py  utils.py
forecaster/logger/: logging.py
forecaster/training/: RollingWindowTrainer.py  early_stopper.py  rolling_window_trainer.py  trainer.py  utils.py
forecaster/training/model/: __init__.py  layer.py  xdfm.py
notebooks/: exploratory_data_analysis.ipynb  forecast_analysis.ipynb  gmv_forecast.ipynb  solution_design_introduction.ipynb
